# InstantIR

./: README.md  pyproject.toml  setup.py  train_stage1_adapter.py
instantir/: __init__.py  api.py  cli.py
instantir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
instantir/data/: __init__.py  dataset.py
instantir/losses/: __init__.py  losses.py
instantir/module/: __init__.py  attention.py
instantir/module/diffusers_vae/: __init__.py
instantir/module/ip_adapter/: __init__.py
instantir/module/unet/: __init__.py
instantir/pipelines/: __init__.py  sdxl_instantir.py
instantir/schedulers/: __init__.py  lcm_single_step_scheduler.py
instantir/scripts/: __init__.py  infer.py  train_previewer_lora.py  train_stage1_adapter.py  train_stage2_aggregator.py
instantir/utils/: __init__.py  train_utils.py  utils.py
losses/: losses.py
